@@ -1,3 +1,4 @@
+# encoding: UTF-8
 require 'eventmachine'
 require 'em-http-request'
 require 'iconv' if RUBY_VERSION.to_f < 1.9
@@ -23,14 +24,14 @@ class ParallelHttp
 		@@results
 	end
 
-	def self.exec_result id, result, error=nil
+	def self.exec_result id, url, result, error=nil
 		body = ''
 		if RUBY_VERSION.to_f < 1.9
 			body = Iconv.iconv('UTF-8//IGNORE', 'UTF-8',  result.response).first
 		else
 			body = result.response.force_encoding('UTF-8').encode('UTF-16', :invalid => :replace, :replace => '').encode('UTF-8')
 		end
-		hsh = {:id => id, :response_code => result.response_header.status, :body => body}
+		hsh = {:id => id, :url => url, :response_code => result.response_header.status, :body => body}
 		hsh.merge!(:error => error) if error
 		@@results << hsh
 		if @@request_size == @@results.size
@@ -39,22 +40,16 @@ class ParallelHttp
 	end
 
 	def self.single request, options
-
 		puts "making a request #{request[:url]}, #{request[:verb]}, #{request[:options]}" if @@verbose
 		opts = request[:options] || {}
 		http = EventMachine::HttpRequest.new(request[:url], options).send(request[:verb].downcase, opts)
 		http.callback do
 			puts "SUCCESS: #{request[:id]}" if @@verbose
-			@@success = request[:id]
-			ParallelHttp.exec_result(request[:id], http)
-			http.close(nil)
+			ParallelHttp.exec_result(request[:id], request[:url], http)
 		end
 		http.errback do |h|
-			if @@success != request[:id]
-				puts "FAILURE: #{request[:id]}" if @@verbose
-				ParallelHttp.exec_result(request[:id], h, h.error)
-				http.close(nil)
-			end
+			puts "FAILURE: #{request[:id]}" if @@verbose
+			ParallelHttp.exec_result(request[:id], request[:url], h, h.error)
 		end
 	end
 end
