@@ -1,3 +1,5 @@
+05/07/13 - Version 0.0.20 - Sending URL back in results
+02/19/13 - Version 0.0.19 - Removing unnecessary close connection causing problems.
 02/15/13 - Version 0.0.18 - Fixing encoding for 1.8.7.
 02/15/13 - Version 0.0.17 - Adding verbosity.
 02/15/13 - Version 0.0.16 - Fixing wrong var name.
